--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -26,11 +26,12 @@
     {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' }}{% endif %}{% endcapture %}
     <link rel="canonical" href="{{ canonical }}">
     <link href="{{ root_url }}/favicon.png" rel="icon">
-    <link href="{{ root_url }}/stylesheets/foundation.min.css" media="screen, projection" rel="stylesheet" type="text/css">
+    <link href="{{ root_url }}/stylesheets/bootstrap.min.css" media="screen, projection" rel="stylesheet" type="text/css">
+    <link href="{{ root_url }}/stylesheets/bootstrap-responsive.min.css" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="{{ root_url }}/stylesheets/app.css" media="screen, projection" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-    <script src="{{ root_url }}/javascripts/foundation.min.js" type="text/javascript"></script>
-    <script src="{{ root_url }}/javascripts/app.js" type="text/javascript"></script>
+    <script src="{{ root_url }}/javascripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+    <!--<script src="{{ root_url }}/javascripts/app.js" type="text/javascript"></script>-->
     <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
     {% include custom/head.html %}
     {% include google_analytics.html %}
