--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -1,15 +1,34 @@
-{% include custom/navigation.html %}
-<ul class="subscription" data-subscription="rss{% if site.subscribe_email %} email{% endif %}">
-    <li><a href="{{ site.subscribe_rss }}" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
-    {% if site.subscribe_email %}
-    <li><a href="{{ site.subscribe_email }}" rel="subscribe-email" title="subscribe via email">Email</a></li>
-    {% endif %}
-</ul>
-{% if site.simple_search %}
-<form action="{{ site.simple_search }}" method="get">
-    <fieldset role="search">
-        <input type="hidden" name="q" value="site:{{ site.url | shorthand_url }}"/>
-        <input class="search" type="text" name="q" results="0" placeholder="Search"/>
-    </fieldset>
-</form>
-{% endif %}
+<div class="navbar navbar-static-top">
+    <div class="navbar-inner">
+        <div class=container>
+            <a class="brand" title="James Andrew Smith">JAS</a>
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".search-collapse">
+                <span class="icon-search"></span>
+            </a>
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".navigation-collapse">
+                <span class="icon-arrow-down"></span>
+            </a>
+
+            <nav role="navigation" class="nav-collapse collapse navigation-collapse">
+                <ul class="nav">
+                    {% include custom/navigation_items.html %}
+                </ul>
+                <ul class="nav subscription" data-subscription="rss{% if site.subscribe_email %} email{% endif %}">
+                    <li><a href="{{ site.subscribe_rss }}" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
+                    {% if site.subscribe_email %}
+                    <li><a href="{{ site.subscribe_email }}" rel="subscribe-email" title="subscribe via email">Email</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </nav>
+            {% if site.simple_search %}
+            <form action="{{ site.simple_search }}" method="get" class="nav-collapse collapse search-collapse navbar-search pull-right">
+                <fieldset role="search">
+                    <input type="hidden" name="q" value="site:{{ site.url | shorthand_url }}"/>
+                    <input class="search-query" type="text" name="q" results="0" placeholder="Search"/>
+                </fieldset>
+            </form>
+            {% endif %}
+        </div>
+    </div>
+</div>
