--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,16 +1,18 @@
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
 {% include head.html %}
 <body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
-<header role="banner">{% include header.html %}</header>
-{% include navigation.html %}
-<div id="main">
-    <div id="content" class="container">
-        <div class="row">
-            {{ content | expand_urls: root_url }}
+<div class="body">
+    <header role="banner">{% include header.html %}</header>
+    {% include navigation.html %}
+    <div id="main">
+        <div id="content" class="container">
+            <div class="row">
+                {{ content | expand_urls: root_url }}
+            </div>
         </div>
     </div>
+    <footer role="contentinfo"><div class="container">{% include footer.html %}</div></footer>
+    {% include after_footer.html %}
 </div>
-<footer role="contentinfo"><div class="container">{% include footer.html %}</div></footer>
-{% include after_footer.html %}
 </body>
 </html>
