Added the link's href to the home navigation link.

--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -11,7 +11,7 @@
             <nav role="navigation" class="nav-collapse collapse navigation-collapse">
                 <ul class="nav">
                     <li>
-                        <a title="James Andrew Smith"><i class="icon-home"></i></a></li>
+                        <a title="James Andrew Smith" href="{{ root_url }}/index.html"><i class="icon-home"></i></a></li>
                     <li class="divider-vertical"></li>
                     {% include custom/navigation_items.html %}
                 </ul>
