--- a/source/_includes/asides/bitbucket.html
+++ b/source/_includes/asides/bitbucket.html
@@ -1,7 +1,7 @@
 {% if site.bitbucket_user %}
-<section>
+<section id="bitbucket">
   <h1>Bitbucket Repos</h1>
-  <ul id="bb_repos" class="unstyled">
+  <ul id="repos" class="unstyled">
     <li class="loading">Status updating...</li>
   </ul>
   {% if site.bitbucket_show_profile_link %}
