--- a/source/_includes/asides/github.html
+++ b/source/_includes/asides/github.html
@@ -1,7 +1,7 @@
 {% if site.github_user %}
 <section id="github">
   <h1>GitHub Repos</h1>
-  <ul id="repos" class="unstyled">
+  <ul id="github_repos" class="unstyled">
     <li class="loading">Status updating...</li>
   </ul>
   {% if site.github_show_profile_link %}
@@ -21,7 +21,7 @@
             user: '{{site.github_user}}',
             count: {{site.github_repo_count}},
             skip_forks: {{site.github_skip_forks}},
-            target: '#gh_repos'
+            target: '#github_repos'
         });
     });
   </script>
