--- a/source/stylesheets/app.css
+++ b/source/stylesheets/app.css
@@ -3,7 +3,7 @@
 -----------------------------------------------------
 :: Shared Styles
 :: Profile
-:: Blog Archives
+:: Blog Archives & Blog Index
 :: Blog Posts
 :: Widgets
 */
@@ -140,6 +140,10 @@ a {
     margin: .5em 1.5em 1em 0
 }
 
+.pagination{
+    text-align: center;
+}
+
 /* -----------------------------------------
   :: Profile
 ----------------------------------------- */
@@ -177,14 +181,19 @@ a {
 }
 
 /* -----------------------------------------
-  :: Blog Archives
+  :: Blog Archives & Blog Index
 ----------------------------------------- */
 #blog-archives article{
     margin-bottom: 20px;
 }
-#blog-archives article>h1{
+#blog-archives article>h1, .blog-index article h1{
     font-size: 24.5px;
     margin-bottom: 0;
+}
+.blog-index article{
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 20px;
+    padding-bottom: 13px;
 }
 
 /* -----------------------------------------
