--- a/source/_includes/asides/bitbucket.html
+++ b/source/_includes/asides/bitbucket.html
@@ -8,15 +8,7 @@
   <a href="https://bitbucket.org/{{site.bitbucket_user}}">@{{site.bitbucket_user}}</a> on Bitbucket
   {% endif %}
   <script type="text/javascript">
-    $.domReady(function(){
-        if (!window.jXHR){
-            var jxhr = document.createElement('script');
-            jxhr.type = 'text/javascript';
-            jxhr.src = '{{root_url}}/javascripts/libs/jXHR.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(jxhr, s);
-        }
-
+    $(function(){
         bitbucket.showRepos({
             user: '{{site.bitbucket_user}}',
             count: {{site.bitbucket_repo_count}},
