--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -31,6 +31,9 @@
     <link href="{{ root_url }}/stylesheets/app.css" media="screen, projection" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
     <script src="{{ root_url }}/javascripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+    <script src="{{ root_url }}/javascripts/twitter.js" type="text/javascript"></script>
+    <script src="{{ root_url }}/javascripts/bitbucket.js" type="text/javascript"></script>
+    <script src="{{ root_url }}/javascripts/github.js" type="text/javascript"></script>
     <!--<script src="{{ root_url }}/javascripts/app.js" type="text/javascript"></script>-->
     <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
     {% include custom/head.html %}
