--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--[if IEMobile 7 ]>
 <html class="no-js iem7"><![endif]-->
-<!--[if lt IE 7IE 7]>
-<html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>
-<html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!-->
+<!--[if lt IE 8]>
+<html class="no-js lt-ie10 lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if lt IE 9]>
+<html class="no-js lt-ie10 lt-ie9" lang="en"> <![endif]-->
+<!--[if lt IE 10]><!-->
 <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -26,6 +26,9 @@
     {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' }}{% endif %}{% endcapture %}
     <link rel="canonical" href="{{ canonical }}">
     <link href="{{ root_url }}/favicon.png" rel="icon">
+    <!--[if lt IE 9]>
+    <script src="javascripts/html5shiv.js"></script>
+    <![endif]-->
     <link href="{{ root_url }}/stylesheets/bootstrap.min.css" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="{{ root_url }}/stylesheets/bootstrap-responsive.min.css" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="{{ root_url }}/stylesheets/app.css" media="screen, projection" rel="stylesheet" type="text/css">
