--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -1,7 +1,11 @@
 <div class="sharing">
+    {% if site.is_linkedin_enabled %}
+    <script type="IN/Share" data-url="{{ site.url }}/{{ page.url }}" data-counter="right"></script>
+    {% endif %}
   {% if site.twitter_tweet_button %}
   <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{ site.url }}{{ page.url }}" data-via="{{ site.twitter_user }}" data-counturl="{{ site.url }}{{ page.url }}" >Tweet</a>
   {% endif %}
+
   {% if site.google_plus_one %}
   <div class="g-plusone" data-size="{{ site.google_plus_one_size }}"></div>
   {% endif %}
