--- a/source/_includes/custom/asides/tag_cloud.html
+++ b/source/_includes/custom/asides/tag_cloud.html
@@ -1,4 +1,4 @@
-<section>
+<section class="tag-cloud">
   <h1>Tag Cloud</h1>
-    <span id="tag-cloud">{% tag_cloud [counter:true] %}</span>
+    <nav>{% tag_cloud [counter:true] %}</nav>
 </section>
