Updated About Me aside.

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,5 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>{% img img-polaroid pull-right /images/profile_headshot_125x125.png Profile headshot %}
+      I am a software engineer and am passionate about the craft in which I work. My interests are wide and varied; ranging from software architecture to UI/UX for the web. I am a strong subscriber to the <abbr title="A set of five principles of object-oriented design">SOLID</abbr> principles and am in constant pursuit of improvement. This site is dedicated to my thoughts, my work and the craft of making quality software.</p>
 </section>
