--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -10,6 +10,7 @@
   <div class="g-plusone" data-size="{{ site.google_plus_one_size }}"></div>
   {% endif %}
   {% if site.facebook_like %}
-    <div class="fb-like" data-send="true" data-width="450" data-show-faces="false"></div>
+    <!--<div class="fb-like" data-send="true" data-width="450" data-show-faces="false"></div>-->
+    <fb:like send="true" width="450" show_faces="true"></fb:like>
   {% endif %}
 </div>
