--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -1,6 +1,6 @@
 <div class="sharing">
     {% if site.is_linkedin_enabled %}
-    <script type="IN/Share" data-url="{{ site.url }}/{{ page.url }}" data-counter="right"></script>
+    <script type="IN/Share" data-url="{{ site.url }}/{{ page.url }}" data-counter="right" data-onsuccess="LinkedInShare"></script>
     {% endif %}
   {% if site.twitter_tweet_button %}
   <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{ site.url }}{{ page.url }}" data-via="{{ site.twitter_user }}" data-counturl="{{ site.url }}{{ page.url }}" >Tweet</a>
