--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
-    <meta name="author" content="{{ site.author }}">
+    <meta name="author" content="http://plus.google.com/117652511575279353270?rel=author">
 
     {% capture description %}{% if page.description %}{{ page.description }}{% else %}{{ content | raw_content }}{% endif %}{% endcapture %}
     <meta name="description" content="{{ description | strip_html | condense_spaces | truncate:150 }}">
