--- a/source/_includes/custom/navigation_items.html
+++ b/source/_includes/custom/navigation_items.html
@@ -1,3 +1,3 @@
 <li><a href="{{ root_url }}/">Blog</a></li>
 <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-<li><a href="{{ root_url }}/profile">Profile</a></li>
+<li><a href="{{ root_url }}/profile" rel="me">Profile</a></li>
